# Macro-Manager

./: .gitignore  README.md  ak 47  antirecol.amc  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
scripts/: ensure-release-windows.cjs  sync-web-root.cjs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: amc_import.rs  commands.rs  config_manager.rs  embedded_weapon_icons.rs  executor.rs  hotkey_util.rs  input_listener.rs  lib.rs  macro_engine.rs  profile_manager.rs  types.rs
