[package]
name = "app"
version = "0.1.0-0"
description = "MacrosManager — Tauri desktop macro tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }
base64 = "0.22"

[dependencies]
serde_json = "1.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
dirs = "5"
thiserror = "1"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_LibraryLoader",
] }
